# dyn_nwg_tray

./: Cargo.toml  LICENSE  build.rs
scripts/: model.rhai
src/: main.rs
